fix overflow

--- a/src/stylesheet/_base.scss
+++ b/src/stylesheet/_base.scss
@@ -16,5 +16,6 @@ body {
   box-sizing: border-box;
   font-family: "Karma", serif;
   width: 100%;
+  overflow: hidden;
   background-color: lighten($color: #000000, $amount: 30);
 }
